tests/ui/main_no_params.stderr
error: #[hegel::main] functions must take exactly one parameter of type ::hegel::TestCase.
 --> tests/ui/main_no_params.rs:5:1
  |
5 | fn main() {}
  | ^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/main_no_params.rs:5:13
  |
5 | fn main() {}
  |             ^ consider adding a `main` function to `$DIR/tests/ui/main_no_params.rs`
