tests/ui/main_no_params.rs
// `#[hegel::main]` requires the function to take exactly one parameter
// (the test case).

#[hegel::main]
fn main() {}
